@startuml

AuthorListView *-- AuthorListController
AuthorListView --* AuthorListController

AuthorListView -> AuthorInputForm
AuthorListController o-- ListStateNotifier
AuthorListController o-- AuthorDBDataSource

AuthorInputFormControllerCreate o-- AuthorDBDataSource
AuthorInputFormControllerEdit o-- AuthorDBDataSource

AuthorInputForm *-- AuthorInputFormControllerCreate
AuthorInputForm *-- AuthorInputFormControllerEdit
AuthorInputForm --* AuthorInputFormControllerCreate
AuthorInputForm --* AuthorInputFormControllerEdit
AuthorDBDataSource o-- DBClient

class AuthorDBDataSource {
  + initialize()
  + add(author: Author): Author
  + change(author: Author): Author
  + delete(id: Integer): void
  + get(id: Integer): Author
  + get_list(page_size: Integer, page_num: Integer, sort_field: String, sort_direction: String, has_father_name: Boolean): List<Author>
  + count(): Integer
}

class DBClient {
  + self.instance(): DBClient
  + query(sql: String): Object
  + last_id(): Integer
}

class AuthorListController {
  - view: Object
  - state_notifier: ListStateNotifier
  - author_rep: AuthorDBDataSource
  - sort_columns: Array<String>
  - sort_by: String
  - father_name_filter_columns: Array<Boolean>
  - father_name_filter: Boolean
  + on_view_created()
  + show_view()
  + show_modal_add()
  + show_modal_edit(current_page: int, per_page: int, selected_row: int)
  + delete_selected(current_page: int, per_page: int, selected_row: int)
  + refresh_data(page: int, per_page: int)
  + sort(page: int, per_page: int, sort_index: int)
  + filter_father_name(page: int, per_page: int, filter_index: int)
  - on_db_conn_error()
}
class ListStateNotifier {
  - items: Array
  - listeners: Array
  + initialize()
  + set_all(objects: Array)
  + add(object: Object)
  + get(number: Integer): Object
  + delete(object: Object)
  + replace(object: Object, new_object: Object)
  + add_listener(listener: Object)
  + delete_listener(listener: Object)
  - notify_listeners()
}
class AuthorDBDataSource {
  + get_list(limit: int, offset: int, sort_by: String, sort_order: String, father_name_filter: Boolean): Array<Author>
  + add(item: Author): Author
  + delete(id: int): void
  + count(): int
}
class AuthorInputFormControllerCreate {
  - parent_controller: AuthorListController
  - author_rep: AuthorDBDataSource
  - view: Object
  + on_view_created()
  + set_view(view: Object)
  + process_fields(fields: Hash<String, String>): void
  - on_db_conn_error()
}
class AuthorInputFormControllerEdit {
  - parent_controller: AuthorListController
  - item: Author
  - author_rep: AuthorDBDataSource
  - view: Object
  + on_view_created()
  + set_view(view: Object)
  + populate_fields(item: Author): void
  - on_db_conn_error()
}
class AuthorListView {
  - PAGE_SIZE: integer = 20
  - controller: AuthorListController
  - current_page: integer = 1
  - total_count: integer = 0
  - items: Struct[]
  - table: refined_table
  - page_label: label
  + initialize()
  + on_create()
  + update(authors: Author[])
  + update_student_count(new_cnt: integer)
  + create()
}

class AuthorInputForm {
  - item: Hash
  - controller: AuthorInputFormControllerCreate
  - entries: Hash
  + initialize(controller: AuthorInputFormControllerCreate, existing_student: Author)
  + on_create()
  + create()
}




@enduml